# KafkaCalculator

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  kafkaconfig.json
libcalc/: libcalc.cpp  libcalc.hpp
source/kafkaclient/: consumer.cpp  kc.cpp  kc.hpp  kf.hpp  main.cpp  producer.cpp
source/kafkaclient/kflib/: kf.cpp  kf.hpp
source/libcalc/: libcalc.cpp  libcalc.hpp
tests/: addition.cpp  calculator.cpp  division.cpp  factorial.cpp  multiplication.cpp  subtraction.cpp
